--- a/table2.htm
+++ b/table2.htm
@@ -2,7 +2,7 @@
 <html>
     <title>TABLE2</title>
     <center> 
-        <table  border="2px" width="1500" height="150" align="center" style="border-color: rgb(0, 0, 0); background-color: bisque;">
+        <table  border="2px" width="1500" height="150" align="center" style="border-color: rgb(0, 0, 0);border-collapse: collapse; background-color: bisque;">
             <tr>
                 <td width="600" height="300" align="center" style="background-color:beige;"> <img src="imagelink/charles-babbage.jpg" alt="val" width="550" height="280"></td>
                 <th colspan="2" style="font-size: larger; font-family: Arial, Helvetica, sans-serif; text-align: justify;">     
